  * Fixed some warnings about ununsed parameters in base-classes and empty implementations
- Fixed some warnings about ununsed parameters
- Added debug mode to cmake file                     
- Now logging to both UI and stdout
- Introduced tabs for fonbook, calllist and log

2010-01-24:
- Implemented configuration dialog. 
  Hostname, area code and country code are now configurable
- Using KNotify for notification only, now
- Refactored KFonbookModel and KCalllistModel using a generic base class KFritzModel
- Moved all libfritz initialization to a threaded class LibFritzInit, 
  speeding up application start
  
2010-01-25:
- Modified LogStream to support logging from libfritz++ and main program.
  Introduced logging macros DBG, INF, ERR
- Added support for password saving using KWallet

2010-01-28:
- Added a ':' in logging messages for better readability
- Added support for libindicate-qt in CMakeLists.txt, introduced define INDICATEQT_FOUND
- Added "outgoingCall", "callConnected" and "callDisconnected" to KNotify
- Integrated KEventHandler into KFritzBoxWindow

2010-01-29:
- Implemented support for libindicate-qt, "missed calls" are notified via that way
- Added .desktop file

2010-01-30:	 
- Added application specific icons "incoming-call", "outgoing-call", "missed-call" and "new-call" 
- Renamed relevant occurences of kfritzbox to kfritz

2010-02-01:
- Some improvements to debian subdir
- Added configuration page "Phone books"
- Added configuration tab "MSN filter" on page "Fritz!Box"
- Added configuration option "Show log"
- First steps to integrate i18n support
- Fixed crash when reloading call history and phone book after configuration changes
- Replace the term "calllist" with "call history" on user interface
- Translated UI texts to german

2010-02-05:
- Closing kfritz main window now minimizes to systray 
- Passing window id to KWallet to remove warning
- Translated texts coming from libfritz++ to german